--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -1,44 +1,51 @@
-/* css for loader */
-/* From Uiverse.io by vinodjangid07 */ 
 .loader {
-  width: fit-content;
-  height: fit-content;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  --book-color: #f1775b;
-  --book-cover-color: #506c86;
-}
-.book {
-  width: 150px;
-  height: 13px;
-  background-color: var(--book-color);
-  border-bottom: 2px solid var(--book-cover-color);
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-end;
   position: relative;
+  width: 33px;
+  height: 33px;
+  perspective: 67px;
 }
-.page {
-  width: 50%;
-  height: 2px;
-  background-color: var(--book-color);
-  animation: paging 0.7s ease-out infinite;
-  transform-origin: left;
-}
-.page2 {
-  width: 50%;
-  height: 2px;
-  background-color: var(--book-color);
-  animation: paging 0.8s ease-out infinite;
-  transform-origin: left;
+
+.loader div {
+  width: 100%;
+  height: 100%;
+  background: #2f3545;
   position: absolute;
+  left: 50%;
+  transform-origin: left;
+  animation: loader 2s infinite;
 }
-@keyframes paging {
-  10% {
-    transform: rotateZ(0deg);
+
+.loader div:nth-child(1) {
+  animation-delay: 0.15s;
+}
+
+.loader div:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.loader div:nth-child(3) {
+  animation-delay: 0.45s;
+}
+
+.loader div:nth-child(4) {
+  animation-delay: 0.6s;
+}
+
+.loader div:nth-child(5) {
+  animation-delay: 0.75s;
+}
+
+@keyframes loader {
+  0% {
+    transform: rotateY(0deg);
   }
-  100% {
-    transform: rotateZ(-180deg);
+
+  50%, 80% {
+    transform: rotateY(-180deg);
+  }
+
+  90%, 100% {
+    opacity: 0;
+    transform: rotateY(-180deg);
   }
 }
