--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "MyFont";
-    src: url('/public\fonts\MyFont.ttf') format('truetype');
+    src: url('/fonts/MyFont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
